# xtdb-rs

./: Cargo.toml  LICENSE  README.md  doit.sh  parse.sh  xtdb_query  xtql_to_json
client/: Cargo.toml
client/examples/: query.rs
client/resources/q-tpch/: q1.edn  q14.edn  q16.edn  q17.edn  q18.edn  q19.edn  q2.edn  q20.edn  q21.edn  q3.edn  q4.edn  q5.edn  q6.edn  q7.edn  q9.edn
client/resources/tpch-json/: q10.json  q11.json  q13.json  q16.json  q19.json  q2.json  q3.json  q7.json  q9.json
client/src/: lib.rs
examples/: xtdb_query.rs  xtql_to_json.rs
q-tpch/: q10.edn  q11.edn  q12.edn  q13.edn  q8.edn
src/: lib.rs
src/client/: mod.rs
src/xtql/: mod.rs  parse.rs
src/xtql/pest/: xtql.pest
src/xtql/types/: error.rs
tpch-json/: q1.json  q12.json  q14.json  q17.json  q18.json  q20.json  q21.json  q4.json  q5.json  q6.json  q8.json
xtql/: Cargo.toml
xtql/examples/: Makefile  index.html  q-tpch  xtql_c.h  xtql_json.c  xtql_json.rs
xtql/src/: lib.rs
