[package]
name = "xtql"
version = "0.1.0"
edition = "2021"
authors = ["dev@janks.eu"]
description = "A Rust client library for XTDB 2.x"
repository = "https://github.com/jsulmont/xtdb-rs"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
pest = "2.7"
pest_derive = "2.7"
wasm-bindgen = "0.2"

[lib]
name = "xtql"
crate-type = ["rlib", "cdylib"]
